# crab2

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: index.html  input.css  package-lock.json  package.json
src/: helpers.rs  main.rs  routes.rs
src/services/: cargo.rs  ddg.rs  github.rs  google.rs  mod.rs  yt.rs
