[package]
name = "crab2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.8"
dirs = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.0.32", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"
axum-extra = { version = "0.4.2", features = ["spa"]}
